Closed Bug 1205194 Opened 10 years ago Closed 10 years ago

[e10s] Calling Fullscreen API could sometimes be stuck there

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla43
Tracking Status
firefox42 --- fixed
firefox43 --- fixed

People

(Reporter: xidorn, Assigned: xidorn)

References

Details

Attachments

(1 file)

It is a regression from bug 1177155 which I noticed when I'm trying fullscreen tests on e10s.
Bug 1205194 - Make OldWindowSize::GetItem() not stuck.
Attachment #8661676 - Flags: review?(bugs)
Comment on attachment 8661676 [details] MozReview Request: Bug 1205194 - Make OldWindowSize::GetItem() not stuck. oops, sorry that I didn't notice this while reviewing. We need this on aurora too, right?
Attachment #8661676 - Flags: review?(bugs) → review+
(In reply to Olli Pettay [:smaug] from comment #2) > Comment on attachment 8661676 [details] > MozReview Request: Bug 1205194 - Make OldWindowSize::GetItem() not stuck. > > oops, sorry that I didn't notice this while reviewing. It's my fault. I believe I'm not supposed to make such silly mistake. > We need this on aurora too, right? Absolutely, especially given this shouldn't have any risk.
Comment on attachment 8661676 [details] MozReview Request: Bug 1205194 - Make OldWindowSize::GetItem() not stuck. Approval Request Comment [Feature/regressing bug #]: bug 1177155 [User impact if declined]: the content process may be stuck when entering DOM fullscreen in some cases [Describe test coverage new/current, TreeHerder]: no test coverage on fullscreen on e10s yet (otherwise I should have noticed this issue). Enabling fullscreen tests on e10s is tracked in bug 1191597 [Risks and why]: no risk, it just fixes a silly small mistake [String/UUID change made/needed]: n/a
Attachment #8661676 - Flags: approval-mozilla-aurora?
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla43
Assignee: nobody → quanxunzhen
Comment on attachment 8661676 [details] MozReview Request: Bug 1205194 - Make OldWindowSize::GetItem() not stuck. We have a bunch people running e10s on aurora, taking it.
Attachment #8661676 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Blocks: 1277932
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: