Bug 1205194 - Make OldWindowSize::GetItem() not stuck. r=smaug, a=sylvestre

--HG--
extra : rebase_source : b00c8cc781cd9897a4762ace194eb981de603532
extra : source : 8d77e00ebc3cd14f207afec484abbc28d1b66b2b