dom/base/nsDOMWindowUtils.cpp
@@ -3284,6 +3284,7 @@ private:
       if (window == aWindow) {
         break;
       }
+      item = item->getNext();
     }
     return item;
   }
